--- a/detail.css
+++ b/detail.css
@@ -63,7 +63,7 @@ body
 	height: auto;
 	background-color: white;
 	color: #000;
-	top: 55%;
+	top: 70%;
 	left: 50%;
 	position: absolute;
 	transform: translate(-50%,-40%);
@@ -124,4 +124,25 @@ body
 	outline: none;
 	height: 40px;
 	color: #000;
+}
+.loginbox select
+{
+	border: none;
+	border-bottom: 1px solid #000;
+	background: transparent;
+	outline: none;
+	height: 40px;
+	color: #000;
+	width: 100%;
+	margin-bottom: 20px;
+}
+.loginbox select option
+{
+	border: none;
+	border-bottom: 1px solid #000;
+	background: transparent;
+	outline: none;
+	height: 40px;
+	color: #000;
+	}
 
