--- a/crop.css
+++ b/crop.css
@@ -3,6 +3,28 @@
 	margin: 0;
 	padding: 0;
 }
+.main-nav
+{
+	float: right;
+	list-style: none;
+	margin-top: 30px;
+}
+.main-nav li
+{
+	display: inline-block;
+}
+.main-nav li a
+{
+	color: black;
+	text-decoration: none;
+	padding: 5px 20px;
+	font-family: 'Source Sans Pro',Helvetica Neue,Helvetica,Arial,sans-serif;
+	font-size: 15px;
+}
+.main-nav li a:hover
+{
+	border: 1px solid black;
+}
 
 
 .logo img
