--- a/home.css
+++ b/home.css
@@ -47,7 +47,8 @@ body
 {
 	font-family: 'Source Sans Pro',Helvetica Neue,Helvetica,Arial,sans-serif;
 	height: 100%;
-	background:white;
+	background: #9dada3;
+	background-image: linear-gradient(to bottom right, white, #EEFDF8);
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
@@ -61,7 +62,7 @@ body
 {
 	width: 50%;
 	height: auto;
-	background-color: white;
+	background-image: url('watering_plant.svg');
 	color: #000;
 	top: 20%;
 	left: 25%;
@@ -144,4 +145,17 @@ body
 	outline: none;
 	height: 40px;
 	color: #000;
+}
+.homeline
+{
+	font-family: 'Source Sans Pro',Helvetica Neue,Helvetica,Arial,sans-serif;
+	margin: 10% 0% 0% 5%;
+	font-size: 30px;
+}
+.landimg img
+{
+	width: 550px;
+	height: auto;
+	margin: -40% 0% 0% 50%;
+	padding: 0% 0% 0% 0%;
 }
